# cocelo-hd-autonomy-light

./: .gitignore  CMakeLists.txt  README.md  build.sh  launch.sh  mapping.sh  package.xml
config/: autonomy_light.yaml  point_lio_mid360.yaml
docs/: autonomy_light_interface_spec.md  autonomy_light_tuning_spec.md
examples/: height_map_subscriber.py
msg/: HeightMap.msg
scripts/: find_mid360_ip.py  height_map_vis.py  package_deb.sh  setup_livox_driver.sh
src/: autonomy_light.cpp
